--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^20.10.6",
+    "nodemon": "^3.0.2",
+    "osc": "^2.4.4",
+    "split2": "^4.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "dev": "yarn ts-node src/index.ts"
+    "dev": "yarn nodemon src/index.ts"
   },
   "devDependencies": {
+    "@types/split2": "^4.2.3",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0"
